# solana-arbitrage-bot-offchain

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  config.example.toml
.github/workflows/: docker.yml  rust.yml
src/: blockhash.rs  config.rs  constants.rs  engine.rs  error.rs  flashloan.rs  http_client.rs  lib.rs  main.rs  types.rs  util.rs
