[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bincode = { version = "1.3.3" }
borsh = {version = "1.5.7", features = ["derive"]}
bytemuck = {version = "1.24.0", features = ["derive","extern_crate_alloc", "min_const_generics"]}
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
console-subscriber = "0.4.1"
derivative = "2.2.0"
dirs = "6.0.0"
# dotenv = "0.15.0"
env_logger = "0.11.8"
jito-sdk-rust = { git = "https://github.com/cfanbo/jito-rust-rpc", tag = "v0.3.2" }
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
self_update = { version = "0.42.0", features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "compression-zip-bzip2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
solana-account-decoder = "2.2.7"
solana-address-lookup-table-program = "2.2.7"
solana-client = "2.2.7"
solana-hash = "2.2.1"
solana-program = "2.2.1"
solana-sdk = "2.2.2"
solana-sdk-ids = "2.2.1"
solana-transaction-error = "2.2.1"
solana-transaction-status = "2.2.7"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = { version = "1.0.7", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
tempfile = "3"
